--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,10 +18,10 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-gradle_build/use_gradle_build=true
+gradle_build/use_gradle_build=false
 gradle_build/export_format=0
-gradle_build/min_sdk="24"
-gradle_build/target_sdk="32"
+gradle_build/min_sdk=""
+gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
