--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./androiod4.apk"
+export_path="./android.aab"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -18,8 +18,8 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-gradle_build/use_gradle_build=false
-gradle_build/export_format=0
+gradle_build/use_gradle_build=true
+gradle_build/export_format=1
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
@@ -30,14 +30,14 @@ version/code=1
 version/name=""
 package/unique_name="com.krisp3t.ribbitriddles"
 package/name="Ribbit Riddles"
-package/signed=false
+package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192=""
+launcher_icons/main_192x192="res://assets/icon.png"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 graphics/opengl_debug=false
@@ -199,3 +199,41 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.1]
+
+name="Web"
+platform="Web"
+runnable=true
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="export/index.html"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=true
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144="res://assets/icon.png"
+progressive_web_app/icon_180x180="res://assets/icon.png"
+progressive_web_app/icon_512x512="res://assets/icon.png"
+progressive_web_app/background_color=Color(0, 0, 0, 1)
