--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./android.aab"
+export_path="export/1.1/android.aab"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -26,7 +26,7 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-version/code=1
+version/code=2
 version/name=""
 package/unique_name="com.krisp3t.ribbitriddles"
 package/name="Ribbit Riddles"
@@ -37,9 +37,9 @@ package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192="res://assets/icon.png"
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+launcher_icons/main_192x192="res://assets/icon/icon.png"
+launcher_icons/adaptive_foreground_432x432="res://assets/icon/icon_fg.png"
+launcher_icons/adaptive_background_432x432="res://assets/icon/icon_bg.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 screen/immersive_mode=true
