--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,6 +3,7 @@
 name="Android"
 platform="Android"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -13,12 +14,16 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 gradle_build/use_gradle_build=true
+gradle_build/gradle_build_directory=""
+gradle_build/android_source_template=""
+gradle_build/compress_native_libraries=false
 gradle_build/export_format=1
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
@@ -26,7 +31,7 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-version/code=2
+version/code=3
 version/name=""
 package/unique_name="com.krisp3t.ribbitriddles"
 package/name="Ribbit Riddles"
@@ -200,12 +205,16 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
 
 [preset.1]
 
 name="Web"
 platform="Web"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -216,12 +225,14 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
+variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=true
 html/export_icon=true
@@ -231,6 +242,7 @@ html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
@@ -238,3 +250,6 @@ progressive_web_app/icon_144x144="res://assets/icon.png"
 progressive_web_app/icon_180x180="res://assets/icon.png"
 progressive_web_app/icon_512x512="res://assets/icon.png"
 progressive_web_app/background_color=Color(0, 0, 0, 1)
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
